Bug 491277 - Pending events show up wrong
Summary: Pending events show up wrong
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-04 20:24 UTC by Tobias Fella
Modified: 2024-08-18 13:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2024-08-04 20:24:13 UTC
- Sometimes, an empty delegate with a very small size is shown
- Indicator for pending events doesn't show up
- All pending events show up with same text (especially noticeable when switching off network)
Comment 1 Tobias Fella 2024-08-18 13:33:26 UTC
Git commit 776807580a9be81aab33b43526c5ecb95ce2ba5e by Tobias Fella.
Committed on 18/08/2024 at 13:26.
Pushed by tfella into branch 'master'.

Re-add pending event indicator

This seems to have been accidentally removed

M  +36   -20   src/timeline/Bubble.qml
M  +2    -0    src/timeline/MessageDelegate.qml

https://invent.kde.org/network/neochat/-/commit/776807580a9be81aab33b43526c5ecb95ce2ba5e
Comment 2 Tobias Fella 2024-08-18 13:33:34 UTC
Git commit 75e9eee3a9b4d837ca48b5a59ed78e3432b01136 by Tobias Fella.
Committed on 18/08/2024 at 13:26.
Pushed by tfella into branch 'master'.

Fix pending events all showing the same text

The content models were stored in the hasmap under the same key, since they all don't have a valid event id yet.
Store them under their transaction id instead.

M  +5    -2    src/models/messageeventmodel.cpp

https://invent.kde.org/network/neochat/-/commit/75e9eee3a9b4d837ca48b5a59ed78e3432b01136
Comment 3 Tobias Fella 2024-08-18 13:37:15 UTC
Git commit b34936a0173fab6a4aa157e0e16126e62522fb5e by Tobias Fella.
Committed on 18/08/2024 at 13:37.
Pushed by tfella into branch 'release/24.08'.

Re-add pending event indicator

This seems to have been accidentally removed
(cherry picked from commit 776807580a9be81aab33b43526c5ecb95ce2ba5e)

M  +36   -20   src/timeline/Bubble.qml
M  +2    -0    src/timeline/MessageDelegate.qml

https://invent.kde.org/network/neochat/-/commit/b34936a0173fab6a4aa157e0e16126e62522fb5e